--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
              </div>
               <div class="carousel-item">
                 <h1>Coding</h1>
-                <p>i know c language, Html, Css A litte-bit of java and i'm currently learning web development.i usually apply my skills on my own projects like creating a personal website,developing games...</p>
+                <p>i know c language, Html, Css Core java,oracle db and i'm currently learning web development(full stack).i usually apply my skills on my own projects like creating a personal website,developing games...</p>
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
