--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a class="contact-link" href="https://www.instagram.com/___vignesh___03/"><i class="fab fa-instagram"></i></a>
         <a class="contact-link" href="https://www.facebook.com/vignesh.sundaresan.338/"><i class="fab fa-facebook-square"></i></a>
             <a class="contact-link" href="mailto:@vignesh20013051@gmail.com"><i class="far fa-envelope"></i></a>
-        <p>©VigneshSundaresan|All Rights Reserved</p>
+        <p>VigneshSundaresan</p>
 
     </section>
 </body>
